<resources>
    <string name="app_name">PokeApp</string>
    <string name="please_connect_to_the_internet">Please connect to the internet!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon">Pokemon</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="application_info">Application info</string>
    <string name="exit">Exit</string>
    <string name="really">Do you really want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="really_delete">Really delete</string>
    <string name="delete">Delete</string>
    <string name="items">Items</string>
    <string name="favorites">Favorites</string>
    <string name="made_by">Made by</string>
    <string name="mihael_majer">Mihael Majer</string>
    <string name="toggle_dark_mode">Toggle dark mode</string>
    <string name="app_version">App version</string>
    <string name="toggle_state">TOGGLE_STATE</string>
</resources>